<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">
            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/username"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toStartOf="@id/username_edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed" />
            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                android:hint="@string/enter_username"
                android:autofillHints="@string/username"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@id/username_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/username_text"/>
            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/username_text"
                app:layout_constraintTop_toBottomOf="@+id/username_text"/>
            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:hint="@string/enter_password"
                android:autofillHints="@string/username"
                android:inputType="textPassword"
                app:layout_constraintBaseline_toBaselineOf="@id/password_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/username_edittext"
                app:layout_constraintStart_toEndOf="@+id/password_text"/>
        <Button
            android:id="@+id/new_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/existing_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/existing_account"
            app:layout_constraintTop_toBottomOf="@+id/new_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>