<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionFragment">

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/instruction"
            android:layout_marginStart="20dp"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />
        <TextView
            android:id="@+id/instruction_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="40dp"
            android:text="@string/instruction_details"
            app:layout_constraintTop_toBottomOf="@+id/instruction"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/view_shoelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/view_list"
            app:layout_constraintTop_toBottomOf="@+id/instruction_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>